--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,13 +16,13 @@
   <div id="navbar-spy" class="collapse navbar-collapse navbar-responsive-collapse">
     <ul class="nav navbar-nav pull-right">
       <li class="active">
-        <a href="/">Home</a>
+        <a href="/">INICIO/a>
       </li>
       <li>
         <a href="/about.html">About</a>
       </li>
       <li>
-        <a href="/blog.html">Blog</a>
+        <a href="/blog.html">BLOG</a>
       </li>
       <li>
         <a href="/team.html">Team</a>
