--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,7 +28,7 @@
         <a href="/team.html">Team</a>
       </li>
       <li>
-        <a href="/contact.html"><span>Contact</span></a>
+        <a href="/contact.html"><span>CONTACTO</span></a>
       </li>
     </ul>         
   </div>
