--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
         <a href="/">INICIO</a>
       </li>
       <li>
-        <a href="/about.html">About</a>
+        <a href="/about.html">NOSOTROS</a>
       </li>
       <li>
         <a href="/blog.html">BLOG</a>
