--- a/_layouts/home_style.html
+++ b/_layouts/home_style.html
@@ -26,7 +26,7 @@
                             <img src="../assets/img/slider/slide2.jpg" height="400" alt="Image of first carousel">
                             <div class="carousel-caption">
                                 <h3 class="carousel-title hidden-xs">PAPELERÍA TRÉBOL</h3>
-                                <p class="carousel-body">RESPONSIVE \ MULTI PAGE</p>
+                                <p class="carousel-body">ENGARGOLADOS\ ENMICADOS</p>
                             </div>
                         </div>
                         <!-- End Slide 1 -->
