--- a/_layouts/home_style.html
+++ b/_layouts/home_style.html
@@ -35,8 +35,8 @@
                         <div class="item">
                             <img src="../assets/img/slider/slide4.jpg" height="400" alt="Image of second carousel">
                             <div class="carousel-caption">
-                                <h3 class="carousel-title hidden-xs">EASY TO CUSTOMIZE</h3>
-                                <p class="carousel-body">BEAUTIFUL \ CLEAN \ MINIMAL</p>
+                                <h3 class="carousel-title hidden-xs">PAPELERÍA TRÉBOL</h3>
+                                <p class="carousel-body">RECARGAS \ PAGOS \ CREACIÓN DE CORREOS</p>
                             </div>
                         </div>
                         <!-- End Slide 2 -->
@@ -45,8 +45,8 @@
                         <div class="item">
                             <img src="../assets/img/slider/slide2.jpg" height="400" alt="Image of third carousel">
                             <div class="carousel-caption">
-                                <h3 class="carousel-title hidden-xs">MULTI-PURPOSE TEMPLATE</h3>
-                                <p class="carousel-body">PORTFOLIO \ CORPORATE \ CREATIVE</p>
+                                <h3 class="carousel-title hidden-xs">PAPELERÍA TRÉBOL</h3>
+                                <p class="carousel-body">ACTUAL. DE DOC. \ PAGOS CON TARJETA\ ESCANEOS/p>
                             </div>
                         </div>
                         <!-- End Slide 3 -->
@@ -71,8 +71,8 @@
         <div class="container">
             <div class="row">
                 <div class="services-header">
-                    <h3 class="services-header-title">Our Mission</h3>
-                    <p class="services-header-body"><em> Things we provide in Office </em>  </p><hr>
+                    <h3 class="services-header-title">PAPELERÍA TRÉBOL</h3>
+                    <p class="services-header-body"><em> TE OFRECEMOS: </em>  </p><hr>
                 </div>
             </div>
       
