--- a/_layouts/home_style.html
+++ b/_layouts/home_style.html
@@ -81,9 +81,9 @@
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated fadeInLeft" data-wow-offset="40">
                         <p class="services-icon"><span class="fa fa-android fa-5x"></span></p>
-                        <h4 class="services-title">Android</h4>
-                        <p class="services-body">Cras interdum placerat libero vel tempor. Curabitur gravida iaculis erat quis dignissim.</p>
-                        <p class="services-more"><a href="#">Find Out More</a></p>
+                        <h4 class="services-title">Pedidos</h4>
+                        <p class="services-body">Si hay algún producto que no esté en nuetsra tienda, puedes hacernos el pedido con un día de anticipación.</p>
+                        <p class="services-more"><a href="#">Más</a></p>
                     </div>
                 </div>
         
