--- a/_layouts/home_style.html
+++ b/_layouts/home_style.html
@@ -90,17 +90,17 @@
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated zoomIn" data-wow-offset="40">
                         <p class="services-icon"><i class="fa fa-apple fa-5x"></i></p>
-                        <h4 class="services-title">Apple</h4>
-                        <p class="services-body">Cras interdum placerat libero vel tempor. Curabitur gravida iaculis erat quis dignissim.</p>
-                        <p class="services-more"><a href="#">Find Out More</a></p>
+                        <h4 class="services-title">Formas de pago</h4>
+                        <p class="services-body">Ahora, además de nuestra forma tradicional de pago en efectivo, también contamos con pagos con tarjeta.</p>
+                        <p class="services-more"><a href="#">Más</a></p>
                     </div>
                 </div>
         
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated fadeInRight" data-wow-offset="40">
                         <p class="services-icon"><i class="fa fa-thumbs-o-up fa-5x"></i></p>
-                        <h4 class="services-title">EASY TO USE</h4>
-                        <p class="services-body">Cras interdum placerat libero vel tempor. Curabitur gravida iaculis erat quis dignissim.</p>
+                        <h4 class="services-title">Calidad</h4>
+                        <p class="services-body">Siempre buscamos los mejores productos con la mejor calidad</p>
                         <p class="services-more"><a href="#">Find Out More</a></p>
                     </div>        
                 </div>
