--- a/_layouts/home_style.html
+++ b/_layouts/home_style.html
@@ -101,7 +101,7 @@
                         <p class="services-icon"><i class="fa fa-thumbs-o-up fa-5x"></i></p>
                         <h4 class="services-title">Calidad</h4>
                         <p class="services-body">Siempre buscamos los mejores productos con la mejor calidad</p>
-                        <p class="services-more"><a href="#">Find Out More</a></p>
+                        <p class="services-more"><a href="#">Más</a></p>
                     </div>        
                 </div>
             </div>
