--- a/_layouts/home_style.html
+++ b/_layouts/home_style.html
@@ -23,7 +23,7 @@
                     <div class="carousel-inner" role="listbox">
                         <!-- Begin Slide 1 -->
                         <div class="item active">
-                            <img src="../assets/img/slider/pape (2).jpg" height="400" alt="Image of first carousel">
+                            <img src="../assets/img/slider/PAPELERÍA TRÉBOL (1).jpg" height="400" alt="Image of first carousel">
                             <div class="carousel-caption">
                                 <h3 class="carousel-title hidden-xs">PAPELERÍA TRÉBOL</h3>
                                 <p class="carousel-body">ENGARGOLADOS\ ENMICADOS</p>
