--- a/_layouts/home_style.html
+++ b/_layouts/home_style.html
@@ -33,7 +33,7 @@
 
                         <!-- Begin Slide 2 -->
                         <div class="item">
-                            <img src="../assets/img/slider/slide4.jpg" height="400" alt="Image of second carousel">
+                            <img src="../assets/img/slider/welcome little one! (1).jpg" height="400" alt="Image of second carousel">
                             <div class="carousel-caption">
                                 <h3 class="carousel-title hidden-xs">PAPELERÍA TRÉBOL</h3>
                                 <p class="carousel-body">RECARGAS \ PAGOS \ CREACIÓN DE CORREOS</p>
@@ -43,7 +43,7 @@
 
                         <!-- Begin Slide 3 -->
                         <div class="item">
-                            <img src="../assets/img/slider/slide2.jpg" height="400" alt="Image of third carousel">
+                            <img src="../assets/img/slider/Tenemo (1).jpg" height="400" alt="Image of third carousel">
                             <div class="carousel-caption">
                                 <h3 class="carousel-title hidden-xs">PAPELERÍA TRÉBOL</h3>
                                 <p class="carousel-body">ACTUAL. DE DOC. \ PAGOS CON TARJETA\ ESCANEOS/p>
