--- a/_layouts/home_style.html
+++ b/_layouts/home_style.html
@@ -112,26 +112,26 @@
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated fadeInLeft" data-wow-offset="40">
                         <p class="services-icon"><span class="fa fa-windows fa-5x"></span></p>
-                        <h4 class="services-title">Windows</h4>
-                        <p class="services-body">Cras interdum placerat libero vel tempor. Curabitur gravida iaculis erat quis dignissim.</p>
-                        <p class="services-more"><a href="#">Find Out More</a></p>
+                        <h4 class="services-title">Recargs</h4>
+                        <p class="services-body">Tenemos recargas con un monto de comisión de $2. La recarga es inmediata.</p>
+                        <p class="services-more"><a href="#">Más</a></p>
                     </div>
                 </div>
         
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated zoomIn" data-wow-offset="40">
                         <p class="services-icon"><i class="fa fa-eye fa-5x"></i></p>
-                        <h4 class="services-title">RETINA READY</h4>
-                        <p class="services-body">Cras interdum placerat libero vel tempor. Curabitur gravida iaculis erat quis dignissim.</p>
-                        <p class="services-more"><a href="#">Find Out More</a></p>
+                        <h4 class="services-title">Fotografías</h4>
+                        <p class="services-body">Podemos imprimirte las fotografías que quieras en papel fotográfico.</p>
+                        <p class="services-more"><a href="#">Más</a></p>
                     </div>
                 </div>
         
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated fadeInRight" data-wow-offset="40">
                         <p class="services-icon"><i class="fa fa-cube fa-5x"></i></p>
-                        <h4 class="services-title">Cubic</h4>
-                        <p class="services-body">Cras interdum placerat libero vel tempor. Curabitur gravida iaculis erat quis dignissim.</p>
+                        <h4 class="services-title">Seguridad en documentos actulizados</h4>
+                        <p class="services-body">Trabajamos con un gestor 100% confible, tus documentos serán actualizados en cuestión de segundos y de forma legal.</p>
                         <p class="services-more"><a href="#">Find Out More</a></p>
                     </div>
                 </div>
