--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,7 @@
         <a href="/blog.html">BLOG</a>
       </li>
       <li>
-        <a href="/team.html">Team</a>
+        <a href="/team.html">EQUIPO</a>
       </li>
       <li>
         <a href="/contact.html"><span>CONTACTO</span></a>
