--- a/_layouts/home_style.html
+++ b/_layouts/home_style.html
@@ -89,7 +89,7 @@
         
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated zoomIn" data-wow-offset="40">
-                        <p class="services-icon"><i class="fa fa-apple fa-5x"></i></p>
+                        <p class="services-icon"><i class="fa fa-credit-card fa-5x"></i></p>
                         <h4 class="services-title">Formas de pago</h4>
                         <p class="services-body">Ahora, además de nuestra forma tradicional de pago en efectivo, también contamos con pagos con tarjeta.</p>
                         <p class="services-more"><a href="#">Más</a></p>
