--- a/_layouts/home_style.html
+++ b/_layouts/home_style.html
@@ -111,7 +111,7 @@
             <div class="row services-row services-row-tail services-row-2">
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated fadeInLeft" data-wow-offset="40">
-                        <p class="services-icon"><span class="fa fa-windows fa-5x"></span></p>
+                        <p class="services-icon"><span class="fa fa-mobile fa-5x"></span></p>
                         <h4 class="services-title">Recargas</h4>
                         <p class="services-body">Tenemos recargas con un monto de comisión de $2. La recarga es inmediata.</p>
                         <p class="services-more"><a href="#">Más</a></p>
