--- a/_layouts/home_style.html
+++ b/_layouts/home_style.html
@@ -120,7 +120,7 @@
         
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated zoomIn" data-wow-offset="40">
-                        <p class="services-icon"><i class="fa fa-eye fa-5x"></i></p>
+                        <p class="services-icon"><i class="fa fa-photo fa-5x"></i></p>
                         <h4 class="services-title">Fotografías</h4>
                         <p class="services-body">Podemos imprimirte las fotografías que quieras en papel fotográfico.</p>
                         <p class="services-more"><a href="#">Más</a></p>
