--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-4">
-        <h3><i class="fa fa-map-marker"></i> Contact:</h3>
+        <h3><i class="fa fa-map-marker"></i> Contacto:</h3>
         <p class="footer-contact">
           {{ site.company_name }} <br>
           Phone: {{ site.telephone_number }} <br>
@@ -13,14 +13,14 @@
       </div>
       <div class="col-md-4">
         <h3><i class="fa fa-external-link"></i> Links</h3>
-        <p><a href="/about"> About ( Who we are )</a></p>
+        <p><a href="/about"> About ( Who we are )</a>https://papeleria-trebol.github.io/about.html</p>
         <p><a href="/about"> Services ( What we do )</a></p>
         <p><a href="/contact"> Contact ( Feel free to contact )</a></p>
         <p><a href="/blog"> Blog ( Write to us )</a></p>
         <p><a href="/team"> Team ( Meet the Team )</a></p> 
       </div>
       <div class="col-md-4">
-        <h3><i class="fa fa-heart"></i> Socialize</h3>
+        <h3><i class="fa fa-heart"></i> Social</h3>
         <div id="social-icons">
           {% if site.googleplus_link %}
             <a href="{{ site.googleplus_link }}" class="btn-group google-plus">
