--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,8 +13,8 @@
       </div>
       <div class="col-md-4">
         <h3><i class="fa fa-external-link"></i> Links</h3>
-        <p><a href="/about"> Nosotros ( Who we are )</a></p>
-        <p><a href="https://papeleria-trebol.github.io/"> Services ( What we do )</a></p>
+        <p><a href="https://papeleria-trebol.github.io/"> Inicio ( Who we are )</a></p>
+        <p><a href="/about"> Nosotros ( What we do )</a></p>
         <p><a href="/contact"> Contact ( Feel free to contact )</a></p>
         <p><a href="/blog"> Blog ( Write to us )</a></p>
         <p><a href="/team"> Team ( Meet the Team )</a></p> 
