--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,9 +15,9 @@
         <h3><i class="fa fa-external-link"></i> Links</h3>
         <p><a href="https://papeleria-trebol.github.io/"> Inicio ( Who we are )</a></p>
         <p><a href="/about"> Nosotros ( What we do )</a></p>
-        <p><a href="/contact"> Contact ( Feel free to contact )</a></p>
-        <p><a href="/blog"> Blog ( Write to us )</a></p>
-        <p><a href="/team"> Team ( Meet the Team )</a></p> 
+        <p><a href="/blog"> Blog ( Feel free to contact )</a></p>
+        <p><a href="/team"> Equipo ( Write to us )</a></p>
+        <p><a href="/Contact"> Contacto ( Meet the Team )</a></p> 
       </div>
       <div class="col-md-4">
         <h3><i class="fa fa-heart"></i> Social</h3>
