--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,7 @@
         <p><a href="/about"> Nosotros ( What we do )</a></p>
         <p><a href="/blog"> Blog ( Feel free to contact )</a></p>
         <p><a href="/team"> Equipo ( Write to us )</a></p>
-        <p><a href="/Contact"> Contacto ( Meet the Team )</a></p> 
+        <p><a href="https://papeleria-trebol.github.io/contact.html"> Contacto ( Meet the Team )</a></p> 
       </div>
       <div class="col-md-4">
         <h3><i class="fa fa-heart"></i> Social</h3>
