--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,11 +13,11 @@
       </div>
       <div class="col-md-4">
         <h3><i class="fa fa-external-link"></i> Links</h3>
-        <p><a href="https://papeleria-trebol.github.io/"> Inicio ( Who we are )</a></p>
-        <p><a href="/about"> Nosotros ( What we do )</a></p>
-        <p><a href="/blog"> Blog ( Feel free to contact )</a></p>
-        <p><a href="/team"> Equipo ( Write to us )</a></p>
-        <p><a href="https://papeleria-trebol.github.io/contact.html"> Contacto ( Meet the Team )</a></p> 
+        <p><a href="https://papeleria-trebol.github.io/"> Inicio</a></p>
+        <p><a href="https://papeleria-trebol.github.io/about.html"> Nosotros</a></p>
+        <p><a href="https://papeleria-trebol.github.io/blog.html"> Blog</a></p>
+        <p><a href="https://papeleria-trebol.github.io/team.html"> Equipo</a></p>
+        <p><a href="https://papeleria-trebol.github.io/contact.html"> Contacto</a></p> 
       </div>
       <div class="col-md-4">
         <h3><i class="fa fa-heart"></i> Social</h3>
