--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
       <span class="icon-bar"></span>
     </button>
 
-    <a class="navbar-brand wow fadeInDownBig" href="index.html"><img class="office-logo" src="../assets/img/slider/lápiz (2).jpg" alt="Office"></a>      
+    <a class="navbar-brand wow fadeInDownBig" href="index.html"><img class="office-logo" src="../assets/img/slider/lápiz (2).png" alt="Office"></a>      
   </div>
 
   <div id="navbar-spy" class="collapse navbar-collapse navbar-responsive-collapse">
