--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -50,6 +50,6 @@
   </div>
 
   <div class="copyright text center">
-    <p>&copy; Copyright {{ site.time | date: '%Y' }}, <a href="#">Your Website Link</a>. <br>Theme ported by <a href="https://melvinchng.github.io/" target="_blank">Melvin Ch'ng</a></p>
+    <p>&copy; Copyright {{ site.time | date: '%Y' }}, <a href="#">Papelería Trébol</a>. <br>Contactanos en WhatsApp <a href="https://wa.me/message/TB23Q6FD2ZTJG1" target="_blank">Envínos un mensaje</a></p>
   </div>
 </footer>
