--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -50,6 +50,6 @@
   </div>
 
   <div class="copyright text center">
-    <p>Conoce nuestros productos y Servicios <a href="#">Papelería Trébol</a>. <br>Contactanos en WhatsApp <a href="https://wa.me/message/TB23Q6FD2ZTJG1" target="_blank">Envínos un mensaje</a></p>
+    <p>Conoce nuestros productos y Servicios <a href="#">Papelería Trébol</a>. <br>Contactanos en WhatsApp <a href="https://wa.me/message/TB23Q6FD2ZTJG1" target="_blank">Envíanos un mensaje</a></p>
   </div>
 </footer>
