--- a/_layouts/home_style.html
+++ b/_layouts/home_style.html
@@ -36,7 +36,7 @@
                             <img src="../assets/img/slider/welcome little one! (1).jpg" height="400" alt="Image of second carousel">
                             <div class="carousel-caption">
                                 <h3 class="carousel-title hidden-xs">PAPELERÍA TRÉBOL</h3>
-                                <p class="carousel-body">RECARGAS \ PAGOS \ CREACIÓN DE CORREOS</p>
+                                <p class="carousel-body">RECARGAS \ TRBAJOS ESCOLARES O REGALOS PERSONALIZADOS \ CREACIÓN DE CORREOS</p>
                             </div>
                         </div>
                         <!-- End Slide 2 -->
