--- a/_layouts/home_style.html
+++ b/_layouts/home_style.html
@@ -131,7 +131,7 @@
                     <div class="services-group wow animated fadeInRight" data-wow-offset="40">
                         <p class="services-icon"><i class="fa fa-lock fa-5x"></i></p>
                         <h4 class="services-title">Seguridad en documentos actulizados</h4>
-                        <p class="services-body">Trabajamos con un gestor 100% confible, tus documentos serán actualizados en cuestión de segundos y de forma legal.</p>
+                        <p class="services-body">Trabajamos con un gestor 100% confible, tus documentos serán actualizados en cuestión de minutos y de forma legal.</p>
                         <p class="services-more"><a href="#">Find Out More</a></p>
                     </div>
                 </div>
