--- a/_layouts/home_style.html
+++ b/_layouts/home_style.html
@@ -83,7 +83,7 @@
                         <p class="services-icon"><span class="fa fa-gift fa-5x"></span></p>
                         <h4 class="services-title">Pedidos</h4>
                         <p class="services-body">Si hay algún producto que no esté en nuetsra tienda, puedes hacernos el pedido con un día de anticipación.</p>
-                        <p class="services-more"><a href="#">Más</a></p>
+                        <p class="services-more"><a href="#"></a></p>
                     </div>
                 </div>
         
@@ -92,7 +92,7 @@
                         <p class="services-icon"><i class="fa fa-credit-card fa-5x"></i></p>
                         <h4 class="services-title">Formas de pago</h4>
                         <p class="services-body">Ahora, además de nuestra forma tradicional de pago en efectivo, también contamos con pagos con tarjeta.</p>
-                        <p class="services-more"><a href="#">Más</a></p>
+                        <p class="services-more"><a href="#"></a></p>
                     </div>
                 </div>
         
@@ -101,7 +101,7 @@
                         <p class="services-icon"><i class="fa fa-thumbs-o-up fa-5x"></i></p>
                         <h4 class="services-title">Calidad</h4>
                         <p class="services-body">Siempre buscamos los mejores productos con la mejor calidad</p>
-                        <p class="services-more"><a href="#">Más</a></p>
+                        <p class="services-more"><a href="#"></a></p>
                     </div>        
                 </div>
             </div>
@@ -114,7 +114,7 @@
                         <p class="services-icon"><span class="fa fa-mobile fa-5x"></span></p>
                         <h4 class="services-title">Recargas</h4>
                         <p class="services-body">Tenemos recargas con un monto de comisión de $2. La recarga es inmediata.</p>
-                        <p class="services-more"><a href="#">Más</a></p>
+                        <p class="services-more"><a href="#"></a></p>
                     </div>
                 </div>
         
@@ -123,7 +123,7 @@
                         <p class="services-icon"><i class="fa fa-photo fa-5x"></i></p>
                         <h4 class="services-title">Trbajos escolares y regalos personalzados</h4>
                         <p class="services-body">Ahora también podemos ayudarte en trabajos escolares como maquets o trabajos a omputadora, o hacer algún regalo con alguna referencia.</p>
-                        <p class="services-more"><a href="#">Más</a></p>
+                        <p class="services-more"><a href="#"></a></p>
                     </div>
                 </div>
         
@@ -132,7 +132,7 @@
                         <p class="services-icon"><i class="fa fa-lock fa-5x"></i></p>
                         <h4 class="services-title">Seguridad en documentos actulizados</h4>
                         <p class="services-body">Trabajamos con un gestor 100% confible, tus documentos serán actualizados en cuestión de minutos y de forma legal.</p>
-                        <p class="services-more"><a href="#">Find Out More</a></p>
+                        <p class="services-more"><a href="#"></a></p>
                     </div>
                 </div>
             </div>
