--- a/_layouts/home_style.html
+++ b/_layouts/home_style.html
@@ -25,7 +25,7 @@
                         <div class="item active">
                             <img src="../assets/img/slider/PAPELERÍA TRÉBOL (4).jpg" height="400" alt="Image of first carousel">
                             <div class="carousel-caption">
-                                <h3 class="carousel-title hidden-xs">PAPELERÍA TRÉBOL</h3>
+                                <h3 class="carousel-title hidden-xs">Etiqueta feliz navidad minimalista nude.png</h3>
                                 <p class="carousel-body">ENGARGOLADOS\ ENMICADOS</p>
                             </div>
                         </div>
