--- a/_layouts/home_style.html
+++ b/_layouts/home_style.html
@@ -25,8 +25,8 @@
                         <div class="item active">
                             <img src="../assets/img/slider/Etiqueta feliz navidad minimalis (2).png" height="400" alt="Image of first carousel">
                             <div class="carousel-caption">
-                                <h3 class="carousel-title hidden-xs"></h3>
-                                <p class="carousel-body">ENGARGOLADOS\ ENMICADOS</p>
+                                <h3 class="carousel-title hidden-xs">...</h3>
+                                <p class="carousel-body">...</p>
                             </div>
                         </div>
                         <!-- End Slide 1 -->
