--- a/_layouts/home_style.html
+++ b/_layouts/home_style.html
@@ -23,7 +23,7 @@
                     <div class="carousel-inner" role="listbox">
                         <!-- Begin Slide 1 -->
                         <div class="item active">
-                            <img src="../assets/img/slider/Feliz Navidad y Próspero Año Nuevo les desa Papelería Trébol.jpg" height="400" alt="Image of first carousel">
+                            <img src="../assets/img/slider/Feliz Navidad y Próspero Año Nuevo les desa Papelería Trébol (1).jpg" height="400" alt="Image of first carousel">
                             <div class="carousel-caption">
                                 <h3 class="carousel-title hidden-xs">...</h3>
                                 <p class="carousel-body">Enmicados/Engargolados</p>
