--- a/_layouts/home_style.html
+++ b/_layouts/home_style.html
@@ -43,7 +43,7 @@
 
                         <!-- Begin Slide 3 -->
                         <div class="item">
-                            <img src="../assets/img/slider/Tenemo (1).jpg" height="400" alt="Image of third carousel">
+                            <img src="../assets/img/slider/O CONTÁCTANOS POR WHATSAPP.jpg" height="400" alt="Image of third carousel">
                             <div class="carousel-caption">
                                 <h3 class="carousel-title hidden-xs">PAPELERÍA TRÉBOL</h3>
                                 <p class="carousel-body">ACTUAL. DE DOC. \ PAGOS CON TARJETA\ ESCANEOS/p>
