--- a/_layouts/home_style.html
+++ b/_layouts/home_style.html
@@ -45,7 +45,7 @@
                         <div class="item">
                             <img src="../assets/img/slider/O CONTÁCTANOS POR WHATSAPP.jpg" height="400" alt="Image of third carousel">
                             <div class="carousel-caption">
-                                <h3 class="carousel-title hidden-xs">PAPELERÍA TRÉBOL</h3>
+                                <h3 class="carousel-title hidden-xs">...</h3>
                                 <p class="carousel-body">ACTUAL. DE DOC. \ PAGOS CON TARJETA\ ESCANEOS/p>
                             </div>
                         </div>
