--- a/_layouts/home_style.html
+++ b/_layouts/home_style.html
@@ -33,7 +33,7 @@
 
                         <!-- Begin Slide 2 -->
                         <div class="item">
-                            <img src="../assets/img/slider/tarjeta navideña feliz navidad i.jpg" height="400" alt="Image of second carousel">
+                            <img src="../assets/img/slider/O CONTÁCTANOS POR WHATSAPP.jpg" height="400" alt="Image of second carousel">
                             <div class="carousel-caption">
                                 <h3 class="carousel-title hidden-xs">PAPELERÍA TRÉBOL</h3>
                                 <p class="carousel-body">RECARGAS \ TRBAJOS ESCOLARES O REGALOS PERSONALIZADOS \ CREACIÓN DE CORREOS</p>
