--- a/_layouts/home_style.html
+++ b/_layouts/home_style.html
@@ -46,7 +46,7 @@
                             <img src="../assets/img/slider/Puedes visitrnos para enterarte de nuestras novedades aquí.jpg" height="400" alt="Image of third carousel">
                             <div class="carousel-caption">
                                 <h3 class="carousel-title hidden-xs">...</h3>
-                                <p class="carousel-body">ACTUAL. DE DOC. \ PAGOS CON TARJETA\ ESCANEOS/p>
+                                <p class="carousel-body">ACTUAL. DE DOC. \ PAGOS CON TARJETA\ ESCANEOS</p>
                             </div>
                         </div>
                         <!-- End Slide 3 -->
